Update fint in  style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap&#39');

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orienta&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap&#39');
 :root{
     --Dark-grayish-blue: hsl(236, 13%, 42%);
     --Soft-red:hsl(0, 85%, 63%);
