--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ img{
     text-decoration: none;
     color: var(--Dark-grayish-blue);
     transition: .5s color ease;
-    font-size: "inter";
+    font-family: "Inter";
 }
 .nav_list ul li a:hover{
     color: var(--Soft-red);
@@ -58,10 +58,10 @@ img{
     font-family: 'Inter', sans-serif;
     color: hsl(36, 100%, 99%);
     padding: 1em;
-    font-size: "inter";
   }
   .heading {
     font-size:2.5em ;
+
     margin-top: 7px;
     color:var(--Soft-orange) ;
   }
@@ -76,15 +76,12 @@ img{
   display: inline-block;
   transition:color 0.5s ease;
 }
-.article a:hover{
-    color: var(--Soft-orange);
-}
 .hero_text{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
     margin-top: 0.5rem;
-    font-size: "inter";
+    font-family: "Inter";
 }
 .hero_text h1{
     font-size: 3rem;
@@ -106,18 +103,18 @@ img{
     display: flex;
     gap:1rem;
     margin: 4rem 0;
-      font-size: "inter";
+    font-family: "Inter";
   }
   .new_article{
     display: flex;
     gap: 1rem;
-      font-size: "inter";
+    font-family: "Inter";
   }
   .new_article .content{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-      font-size: "inter";
+    font-family: "Inter";
     
   }
   .new_article img{
